<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.aplication</groupId>
	<artifactId>KnowledgeGraphs</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<repositories>
		<repository>
			<id>hypergraphdb</id>
			<url>http://hypergraphdb.org/maven</url>
		</repository>
	</repositories>
	<properties>
<configuration-vmArgs46>--add-opens java.base/java.lang.ref=ALL-UNNAMED</configuration-vmArgs46>
<configuration-vmArgs>
            --add-opens java.base/java.lang.ref=ALL-UNNAMED
          </configuration-vmArgs>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>21</javafx.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
			<classifier>linux</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
			<classifier>linux</classifier>
		</dependency>
		<dependency>
			<groupId>org.hypergraphdb</groupId>
			<artifactId>hgbdbje</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.hypergraphdb</groupId>
			<artifactId>hgdb</artifactId>
			<version>1.3</version>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>org.aplication.KnowledgeGraphs.App</mainClass>
					<modules>
						<module>javafx.controls</module>
						<module>javafx.fxml</module>
					</modules>
				<options>
        
            <option>--add-opens</option>
            <option>java.base/java.lang.ref=hgdb</option>
         	 </options>
				</configuration>
			
			</plugin>
		</plugins>
	</build>

</project>
